--- a/chroma_init_dir.ipynb
+++ b/chroma_init_dir.ipynb
@@ -11,7 +11,8 @@
     "from langchain_text_splitters import CharacterTextSplitter\n",
     "from chromadb.utils import embedding_functions\n",
     "import os\n",
-    "import chromadb"
+    "import chromadb\n",
+    "from chromadb.config import Settings"
    ]
   },
   {
@@ -25,13 +26,22 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "id": "7be47edb-f82d-47d6-aef0-a37049aa0c18",
+   "metadata": {},
+   "source": [
+    "settings = Settings(allow_reset=True)\n",
+    "client.reset()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c764005-c479-4718-b3db-e0e315dd2d04",
+   "id": "7d7c345b-0a2b-4fd9-a0de-b4feab82d305",
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.heartbeat()"
+    "client.count_collections()"
    ]
   },
   {
